# fast-langid

./: .flake8  README.md  package.json  pyproject.toml  pyrightconfig.json  tbump.toml
.github/workflows/: routine-tests.yml
fastlid/: __init__.py  __main__.py  fastlid.py  supported_langs.py
tests/: __init__.py  test_fastlid.py  test_fastlid_aoye.py  test_fastlid_elle_en_zh.py  test_fastlid_version.py
