[tool.poetry]
name = "fastlid"
version = "0.1.0"
description = "Detect language via a fasttext model"
authors = ["freemt"]

[tool.poetry.dependencies]
python = "^3.7"
logzero = "^1.7.0"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
